# add-gitignore

./: Cargo.toml  README.md
src/: client.rs  main.rs  term.rs
